<resources>
    <string name="app_name">Stride</string>
    <string name="title_activity_sign_up">Sign up</string>

    <!-- Strings related to login -->
    <!--<string name="prompt_email">Email</string>-->
    <!--<string name="prompt_password">Password (optional)</string>-->
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <!--<string name="action_sign_in_short">Sign in</string>-->
    <!--<string name="error_invalid_email">This email address is invalid</string>-->
    <!--<string name="error_invalid_password">This password is too short</string>-->
    <!--<string name="error_incorrect_password">This password is incorrect</string>-->
    <!--<string name="error_field_required">This field is required</string>-->
    <!--<string name="permission_rationale">"Contacts permissions are needed for providing email-->
    <!--completions."-->
    <!--</string>-->


    <string name="separator_main">:</string>
    <string name="separator_tenths">.</string>
    <string name="zero_value_1">0</string>
    <string name="zero_value_2">00</string>
    <string name="zero_value_3">000</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="map">View Map</string>

    <string name="content_text">Run in progress...</string>
    <string name="stopwatch">View Stopwatch</string>
    <string name="title_activity_run_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_testing">Map</string>
</resources>
